<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Promi KZ</string>
    <string name="open">Открыт</string>
    <string name="close">Закрыт</string>
    <string name="txtprofile">Авторизуйтесь и получите \n <font color='#F9A825'> 10% скудку </font> на сервис \n Repair Flat Astana city</string>
    <string name="register_message_email">Без подтверждения телефонного номера , Вы не можете создавать продукты</string>
    <string name="register_message_shopCreate">Теперь вы можете продавать свои товары</string>
    <string name="todo">что-то</string>
    <string name="token_error">Произошла ошибка \nОбновить приложение!</string>
    <string name="error_link">Недействительная ссылка</string>
    <string name="server_error">На данный момент \n сервер обновляется… \n пожалуйста подождите немного</string>
    <string name="not_specialist">Вы еще не создали специалиста</string>
    <string name="null_error">У вас еще нет \nсохраненных объявлений</string>
    <string name="auth_create">Авторизуйтесь и начните создавать объявления.</string>
    <string name="gmail_create">Подтвердите номер!\nбез подтверждении\nвы не можете создать объявления</string>
    <string name="verify_user">Вам было отправлено подтверждения на почту</string>
    <string name="verify_user_phone">Нужно подтвердить номер</string>
    <string name="create_shop_text">Без магазина, \nВы не можете создавать товары!</string>
    <string name="update_shop_text">Вы успешно изменили магазин</string>
    <string name="easy_buy">Продать станок очень легко</string>
    <string name="story_home">Срочные акции</string>
    <string name="search_home">Поиск</string>
    <string name="specialist_stanki_home">Станки, специалисты, курсы</string>
    <string name="advertising_home">Реклама</string>
    <string name="category_home">Категории</string>
    <string name="fast_search">Быстрый поиск</string>
    <string name="all_machines">Станки</string>
    <string name="descrip_test">descrip</string>
    <string name="all_courses">Курсы</string>
    <string name="all_flea">Барахолка</string>
    <string name="select_country">Выберите город</string>
    <string name="all_specialists">Специалисты</string>
    <string name="tenge">\u0020 теңге</string>
    <string name="test_city"><![CDATA[Россия -> Москва]]></string>
    <string name="characteristic">Характеристики:</string>
    <string name="installment_plan">Возможность оформления в рассрочку:</string>
    <string name="update_text_description">Описание:</string>
    <string name="v_kredit">от 5 000 тенге/мес.</string>
    <string name="v_kredit2">от 25 000 тенге/мес.</string>
    <string name="checkout">Оформить</string>
    <string name="average_rating">Рейтинг товара: </string>
    <string name="rate">Поставьте рейтинг к этому продукту</string>
    <string name="rate_spec">Поставьте рейтинг к этому специалисту</string>
    <string name="rating">Рейтинг: </string>
    <string name="update_text_top">в топе</string>
    <string name="update_text_vip">VIP</string>
    <string name="update_text_allocations">Выделения</string>
    <string name="similar_ads">Похожие объявления</string>
    <string name="message">Написать</string>
    <string name="call">Позвонить</string>
    <string name="russia">Русский</string>
    <string name="english">English</string>
    <string name="kazakhstan">Қазақ тілі</string>
    <string name="save">Сохранить</string>
    <string-array name="State">
        <item>Б/у</item>
        <item>Новый</item>
    </string-array>
    <string-array name="Departure">
        <item>Да, готов к переездам</item>
        <item>Нет. не готов к переездам</item>
    </string-array>
    <string-array name="Type">
        <item>Физ. лицо</item>
        <item>Юр. лицо</item>
        <item>Учебное. завед</item>
    </string-array>
    <string-array name="RasFirst">
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
        <item>30%</item>
        <item>40%</item>
        <item>50%</item>
    </string-array>
    <string-array name="RasMonth">
        <item>3 месяц</item>
        <item>6 месяц</item>
        <item>12 месяц</item>
        <item>24 месяц</item>
        <item>48 месяц</item>
    </string-array>
    <string-array name="AutoMessageArray">
        <item>Ещё актуально?</item>
        <item>Я заинтересован!</item>
        <item>Обмен интересует?</item>
        <item>Торг возможен?</item>
        <item>Где мы можем встретиться?</item>
        <item>Готов купить!</item>
        <item>За сколько отдадите?</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_connection">Нет соединения</string>
    <string name="check_connections_internet">Пожалуйста проверьте соединения с интернетом</string>
    <string name="need_one_picture">Нужна хотябы одна картинка</string>
    <string name="upload_pictures">Загрузите картинки</string>
    <string name="select_category">Выберите категорию</string>
    <string name="select_brand">Выберите бренд</string>
    <string name="oops_mistake">Упс ошибочка</string>
    <string name="add_all_fields">Заполните все поля!</string>
    <string name="enter_installment_amount">Введите сумму для рассрочки</string>
    <string name="maximum_10">Максимальная количество 10</string>
    <string name="maximum_4">Максимальная количество 4</string>
    <string name="maximum_5">Максимальная количество 5</string>
    <string name="not_selected_photo">Фотография не выбрано</string>
    <string name="successfully_change_product">Вы успешно изминили продукт</string>
    <string name="yes_verify">Да, Подвердить!</string>
    <string name="confirm_later">Подвердить пожже</string>
    <string name="editing_ads_title">Редактирование объявления</string>
    <string name="name_products">Названия товара</string>
    <string name="main_photo">Главное фото</string>
    <string name="additional_photos">дополнительные фотографии</string>
    <string name="add_description">Добавьте описание</string>
    <string name="price">Цена</string>
    <string name="negotiable">Договорная</string>
    <string name="state">Состояние</string>
    <string name="state2">Состояние:</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="country2">Страна:</string>
    <string name="city2">Город:</string>
    <string name="payment_installments">Возможность оформления \nв рассрочку</string>
    <string name="сhoose_payment">Выберите первоначальный взнос</string>
    <string name="сhoose_monthly_payment">Выберите ежемесячной оплаты</string>
    <string name="show_calculation">Показать рассчет</string>
    <string name="possibility_leave_feedback">Возможность оставлять отзывы</string>
    <string name="fields_additional">Дополнительные поля: </string>
    <string name="null_string">Пусто</string>
    <string name="selected_photo">Выберите фотографии</string>
    <string name="successfully">УСПЕШНО!</string>
    <string name="yeah_product">Вы создали продукт!</string>
    <string name="yeah_specialist">Вы создали специалиста</string>
    <string name="exit">Выйти</string>
    <string name="continue_app">Продолжить</string>
    <string name="total">Всего</string>
    <string name="not_banner">В этом баннере нет ссылки</string>
    <string name="enter_email_correctly">Введите email / номер телефона правильно</string>
    <string name="no_select">Вы не выбрали</string>
    <string name="successfully_registered">Вы успешно зарегистрировались!</string>
    <string name="maximum_13">Введите номер полностью</string>
    <string name="minimum_8">Минимальная количество 8</string>
    <string name="minimum_8_password">Пароль должен состоять \nне менее 8 символа</string>
    <string name="error_login_or_password">Логин или Пароль неверный</string>
    <string name="null_login_or_password">Логин или Пароль пусто</string>
    <string name="enter_postal_address">Введите email / номер телефона</string>
    <string name="active">Активные</string>
    <string name="inactive">Неактивные</string>
    <string name="need_sign_up">Вам нужно авторизоваться!</string>
    <string name="ready_move">Готов к переезду</string>
    <string name="yes">Да</string>
    <string name="not">Нет</string>
    <string name="not_skills">Нет умений</string>
    <string name="not_rating">Нет рейтинга</string>
    <string name="reviews">отзывов</string>
    <string name="deleted_youre_products">Вы удалили товар</string>
    <string name="disabled_youre_products">Вы деактивировали товар</string>
    <string name="delete_products">Вы уверены что хотите удалить этот товар</string>
    <string name="cleared">Очищено!</string>
    <string name="server_error_500">Ошибка сервера 500</string>
    <string name="error_problems">Неполадки</string>
    <string name="you_added">Вы добавили</string>
    <string name="comparing_to">в сравнение</string>
    <string name="fovarite_to">в избранные</string>
    <string name="same_category">Товары должны состоять в одной категории</string>
    <string name="review_disabled">Отзыв отключен</string>
    <string name="not_categorized">Без категории</string>
    <string name="new_products">Новая</string>
    <string name="boo_products">Б/у</string>
    <string name="month_to">месяц по</string>
    <string name="phys_face">Физ. лицо</string>
    <string name="jur_face">Юр. лицо</string>
    <string name="educatin_institution">Учебное. заведение</string>
    <string name="language">Язык</string>
    <string name="phone">Телефон</string>
    <string name="online_chat">Чаты</string>
    <string name="favorite">Избранные</string>
    <string name="notifications">Уведомления</string>
    <string name="account_recovery">Восстановление аккаунта</string>
    <string name="reestablish">Восстановить</string>
    <string name="paid_services">Платные услуги</string>
    <string name="profile">Профиль</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="home">Главная</string>
    <string name="comparison">Сравнение</string>
    <string name="about">Служба поддержки</string>
    <string name="me_profile">Мой профиль</string>
    <string name="my_store">Мой магазин</string>
    <string name="sign_out">Выйти с аккаунта</string>
    <string name="other">Другое</string>
    <string name="settings">Настройки</string>
    <string name="text_ads_1">Для создания объявления на Promi KZ необходимо пройти регистрацию в качестве физического лица, юридического лица или учебного заведения. После успешной регистрации можно создать магазин, в котором будут размещаться объявления. Чтобы создать объявление на Promi KZ, следуйте этим простым шагам:</string>
    <string name="obzaz_1">1</string>
    <string name="text_ads_1_1">Авторизуйтесь на сайте или в приложении Promi KZ, используя свой логин и пароль или через смс подтверждение.</string>
    <string name="obzaz_2">2</string>
    <string name="text_ads_1_2">Нажмите на кнопку \"Создать объявление\" в нижней панели навигации и заполните все необходимые поля, включая заголовок, описание, цену, категорию товара и фотографии.</string>
    <string name="obzaz_3">3</string>
    <string name="obzaz_4">4</string>
    <string name="text_ads_1_3">Убедитесь, что вы указали правильную цену и описание товара, а также загрузили достаточное количество фотографий, чтобы привлечь внимание потенциальных покупателей.</string>
    <string name="text_ads_1_4">Нажмите на кнопку \"Опубликовать объявление\", чтобы разместить его на сайте.</string>
    <string name="text_ads_2">После того, как вы опубликуете свое объявление, оно будет доступно для всех пользователей Promi KZ. Вы можете просматривать и управлять своими объявлениями в любое время на странице вашего магазина. Если вы захотите изменить цену, описание или фотографии, вы можете сделать это в любое время, нажав на кнопку \"Редактировать объявление\".</string>
</resources>