<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/nav_header">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_view_menu_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_view_menu_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_view_menu_sravnit"
            android:icon="@drawable/ic_compare"
            android:title="@string/comparison" />

        <item
            android:id="@+id/nav_view_menu_stanki"
            android:icon="@drawable/all_machine"
            android:title="@string/all_machines" />

        <item
            android:id="@+id/nav_view_menu_specialist"
            android:icon="@drawable/servis"
            android:title="@string/all_specialists" />

        <item
            android:id="@+id/nav_view_menu_kurs"
            android:icon="@drawable/ic_book"
            android:title="@string/all_courses" />

        <item
            android:id="@+id/nav_view_menu_buy"
            android:icon="@drawable/ic_pay"
            android:title="@string/paid_services" />

        <item
            android:id="@+id/nav_view_menu_chad"
            android:icon="@drawable/ic_chat"
            android:title="@string/online_chat" />

        <item
            android:id="@+id/nav_view_menu_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications" />

        <item
            android:id="@+id/nav_view_menu_company"
            android:icon="@drawable/ic_osebe"
            android:title="@string/about" />

    </group>


    <item android:title="@string/profile">

        <menu>
            <group android:checkableBehavior="single">


                <item
                    android:id="@+id/nav_view_menu_login"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/me_profile" />

                <item
                    android:id="@+id/nav_view_menu_my_shop"
                    android:icon="@drawable/ic_store"
                    android:title="@string/my_store" />


            </group>

        </menu>

    </item>

    <item android:title="@string/other">

        <menu>
            <group android:checkableBehavior="single">


                <item
                    android:id="@+id/nav_view_menu_setting"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings" />

                <item
                    android:id="@+id/nav_view_menu_exit_account"
                    android:icon="@drawable/ic_exit_account"
                    android:title="@string/sign_out" />

            </group>

        </menu>

    </item>
</menu>