<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.auth.reset.ResetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/resetToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/resetBackCard"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/fon1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_recovery"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>



    <LinearLayout
        android:id="@+id/resetLin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetToolbar">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/shops_icon"
            android:contentDescription="TODO" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/phone"
            app:boxCornerRadiusBottomEnd="@dimen/all_radius_12dp"
            app:boxCornerRadiusBottomStart="@dimen/all_radius_12dp"
            app:boxCornerRadiusTopEnd="@dimen/all_radius_12dp"
            app:boxCornerRadiusTopStart="@dimen/all_radius_12dp"
            app:helperText="@string/enter_phone_number"
            app:helperTextTextColor="@color/fon1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">


            <com.github.vardemin.materialcountrypicker.PhoneNumberEditText
                android:id="@+id/authEditPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cp_autoDetectCountry="true"
                app:cp_fastScrollerBubbleColor="@color/colorPrimary"
                app:cp_fastScrollerBubbleTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:cp_fastScrollerHandleColor="@color/fon1"
                app:cp_listItemTextColor="@color/fon1"
                app:cp_fullScreenToolbarColor="@color/orange"
                app:cp_preferredCountries="kz, kg"
                app:cp_rememberLastSelection="true"
                app:cp_setCountryCodeBorder="true"
                app:cp_showCountryCodeInView="true"
                app:cp_showCountryDialCodeInView="true"
                app:cp_showFastScroll="true"
                app:cp_showFullScreeDialog="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetButton"
            app:cornerRadius="@dimen/all_radius_12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:elevation="30sp"
            android:text="@string/reestablish"
            tools:layout_editor_absoluteX="20dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/resetWorkError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:layout_marginBottom="210dp"
            android:src="@drawable/server_progress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="invisible"
            android:text="@string/server_error"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>